fix: add spacing between secondary status items and dest

--- a/src/components/displays/WestMidsLCD/css/board/secondaryTrainData.less
+++ b/src/components/displays/WestMidsLCD/css/board/secondaryTrainData.less
@@ -38,6 +38,7 @@
     }
 
     .status {
+      margin-left: 16px;
       color: var(--grey);
       text-align: right;
     }
